1999-01-17  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/reporter.c: always call output_stats(), the problem is
	that degraded_mode is set if amflush fills the tape.

1999-01-17  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amflush.c: write debuging info to $logdir/amflush
	instead of /dev/null if we run in background.
	* server-src/amcleanup.sh.in: rename $logdir/amflush.

1999-01-11  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: fix a divide by zero error.

1999-01-10  Thomas Hepper <th@ant.han.de>
        * rewite of the scsi-changer-driver.c and the os depnedent
          parts. Removed one layer of functions (Move, Eject, Clean ...)

1999-01-05  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: report the current dump when reporting
	the busy time of each dumper.

1998-12-30  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/dumper.c: open temporary holding file with O_TRUNC flags
	and with mode 0600.

1998-12-28  John R. Jackson  <jrj@purdue.edu>

	* server-src/reporter.c: do not drop core generating labels if the
	tape label is not defined, e.g. in degraded mode (compliments of
	Jan L. Peterson <jlp@Part.NET>).

1998-12-28  John R. Jackson  <jrj@purdue.edu>

	* server-src/amtape.c: initialize two strings to NULL to avoid a
	core dump, compliments of G. Allen Morris III <gam3@acm.org>.

1998-12-27  John R. Jackson  <jrj@purdue.edu>

	* man/amreport.8.in: remove reference to 8.5x11 paper size for the
	3-hole binder.

1998-12-27  John R. Jackson  <jrj@purdue.edu>

	* example/3hole.ps: new lbl-templ file for 3 hole punch reports
	* example/Makefile.am: add 3hole.ps

1998-12-22  Thomas Hepper <th@icem.de>

	* docs/TAPE.CHANGERS Update notes about chg-scsi
	* changer-src/chg-scsi.c Added new config option tapestatus,
	if set the tape log pages are written to this file.
	changed parameter list for get_clean_state/ask_clean,